--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -2,4 +2,14 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-	version="3.1" />
+	version="3.1">
+	<error-page>
+		<error-code>404</error-code>
+		<location>/WEB-INF/JSP/errorpages/404.jsp</location>
+	</error-page>
+	<error-page>
+		<exception-type>be.vdab.dao.DAOException</exception-type>
+		<location>/WEB-INF/JSP/errorpages/daoexception.jsp</location>
+	</error-page>
+</web-app>
+	
